src/test/deca/context/valid/provided/declaration_variable.deca
/*/ Description:
//    Programme faisant la déclaration d'une variable deux fois d'affilée.
//
// Resultats:
// Historique:
//    cree le 01/01/2022*/

{
        int x = 3;
        int y = 6;
}
