src/test/deca/context/invalid/provided/non_declaration.deca
/*/ Description:
//    Usage d'une variable non déclarée
//
// Resultats:
//    Ligne 14 : Erreur contextuelle
//
// Historique:
//    cree le 01/01/2022*/

{
        int x = 3;
        int y = 4;
        int a;
        a = z - x;

}
